# rm_digitalimg_proc_deep

./: CMakeLists.txt  package.xml  process_plugin.xml
cfg/: Inference.cfg
config/: inference.yaml
include/: common.h  inference.h  number_classifier.h  process_plugin.h
launch/: video_detector.launch
model/: mlp_dx.onnx
model/number_classifier_fp16/: number_cls.xml
model/number_cls/: num_cls.xml
model/v12_openvino_fp16/: v12_openvino.xml
model/v12_openvino_model/: metadata.yaml  v12.xml
src/: inference.cpp  number_classifier.cpp  process_plugin.cpp  video_detect.cpp
